Bug 1868504 - Fix crash bug in mbox parsing. r=leftmostcat

Differential Revision: https://phabricator.services.mozilla.com/D195738

--HG--
extra : moz-landing-system : lando